Update Wei Cui's Assignment-Report.html
update web version address

--- a/Wei Cui's Assignment-Report.html
+++ b/Wei Cui's Assignment-Report.html
@@ -27,7 +27,7 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://buhuizuo.github.io/Assessment-2-Team-Project/index.html">GitHub Pages Link to Website Version</a>
+                  <a class="nav-link" href="https://buhuizuo.github.io/Wei-s-Assignment-Report-/">GitHub Pages Link to Website Version</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="IdealJobs.html"> GitHub Repository Link </a>
