--- a/Wei Cui's Assignment-Report.html
+++ b/Wei Cui's Assignment-Report.html
@@ -30,7 +30,7 @@
                   <a class="nav-link" href="https://buhuizuo.github.io/Wei-s-Assignment-Report-/">GitHub Pages Link to Website Version</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="IdealJobs.html"> GitHub Repository Link </a>
+                  <a class="nav-link" href="https://github.com/buhuizuo/Wei-s-Assignment-Report-"> GitHub Repository Link </a>
                 </li>
               </ul>
             </div>
